--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li>
             <a href="#text">Text</a>
             <ul>
+              <A HREF="html2.html">About this site</A>
               <li><a href="#text__headings">Headings</a></li>
               <li><a href="#text__paragraphs">Paragraphs</a></li>
               <li><a href="#text__blockquotes">Blockquotes</a></li>
