--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <li>
             <a href="#text">Text</a>
             <ul>
-              <A HREF="html2.html">About this site</A>
+              <li><a href="html2.html" title="About Me">About Me</a></li>
+              <a href="html2.html" title="About Me">About Me</a>
               <li><a href="#text__headings">Headings</a></li>
               <li><a href="#text__paragraphs">Paragraphs</a></li>
               <li><a href="#text__blockquotes">Blockquotes</a></li>
