--- a/pages/htmlreference.html
+++ b/pages/htmlreference.html
@@ -278,7 +278,7 @@
           </article>
           <article id="embedded__iframe">
             <header><h2>IFrame</h2></header>
-            <div><iframe src="index.html" height="300"></iframe></div>
+            <div><iframe src="../index.html" height="300"></iframe></div>
             <footer><p><a href="#top">[Top]</a></p></footer>
           </article>
         </section>
