--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <section class="hero" id="hero">
     <h2 class="hero_header">HERO <span class="light">LIGHT</span></h2>
     <p class="tagline">Light is a simple one page website</p>
+	  <img src="Media/animated_signature.svg" alt="Signature Animation" width="100%" height="20%" class="0"/>
   </section>
   <!-- About Section -->
   <section class="about" id="about">
