--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Curtis Hoffman">
 <!-- Add keywords for SEO -->
 <!-- Add viewport meta data -->
-<link rel="stylesheet" href="css/styles.css?v=1.0">
+<link rel="stylesheet" href="css/styles.css">
 <link href="CSS/Page_Size.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
