moved all files to main folder

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="author" content="Curtis Hoffman">
 <!-- Add keywords for SEO -->
 <!-- Add viewport meta data -->
-<link rel="stylesheet" href="css/styles.css">
-<link href="CSS/Page_Size.css" rel="stylesheet" type="text/css" media="screen">
+<link rel="stylesheet" href="styles.css">
+<link href="Page_Size.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
