--- a/resume/resume.html
+++ b/resume/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <!--- To Do:
 Make a mobile website
 #reference for different pages, link to headings within page
@@ -15,17 +15,13 @@ anchor links for scrolling elements, smooth scroll to anchor
  --->
 <html>
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="resume.css">
 
 <body>
-<!-- Logo Image -->
-<div class="placeholder"></div>
 
 <!-- Navigation Bar -->
 <nav>
 <div class="navsection">
-
-
 <div class="navbutton">Home  <!--- All Caps? Change Styling --->
 <div class="dropdown-content"> <!--- Add animation to the dropdown menu --->
 <a href="#">Introduction</a>
@@ -70,12 +66,10 @@ anchor links for scrolling elements, smooth scroll to anchor
 
 
 </nav>
+<!--------------------------------------------------------------------------------------------->
 
 <!-- Content -->
 <main>
-
-<h1 class="bio">Bio</h1>
-<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at mauris ac erat feugiat blandit. Ut suscipit, lorem in ornare rhoncus, mi eros condimentum augue, eu vehicula enim lacus at ipsum. Cras eu nunc tellus. Aliquam est felis, scelerisque in massa sit amet, bibendum tincidunt nulla. Curabitur quis purus commodo, egestas ipsum ac, dignissim erat. Phasellus tincidunt ultricies condimentum. Sed cursus est sit amet mauris varius, vel aliquet tortor varius. Suspendisse eget elit justo. Aenean convallis tortor vel libero mollis porta. Add links to the paragraph Add signature, maybe have it animate once on scroll</p>
 </main>
 
 <!--- Add hover dialogue tags, hover slides out text or logo that says linkedin or email, make logos white? -->
