--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ horizontal scrolling with an animation to match with it?
 Add category sorters for resume and experience
 
 anchor links for scrolling elements, smooth scroll to anchor
+other stuffs
  --->
 <html>
 
