--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@ other stuffs
 </div>
 </div>
 
+<!-- Footer -->
 <div class="footerlinks">
+
+<!-- Experience -->
 <div class="links">
 <div class="heading">Experience</div>
 <div class="pages">Engineering</div>
@@ -105,6 +108,7 @@ other stuffs
 </div>
 <div class="links">
 
+<!-- Projects -->
 <div class="heading">Projects</div>
 <div class="pages">Heading</div>
 <hr>
@@ -116,12 +120,13 @@ other stuffs
 </div>
 <div class="links">
 
-<div class="heading">Other Stuffs</div>
-<div class="pages">Heading</div>
+<!-- Other Links -->
+<div class="heading">Contact Me ???</div>
+<div class="pages">Email</div>
 <hr>
-<div class="pages">Heading</div>
+<div class="pages">LinkedIn</div>
 <hr>
-<div class="pages">Heading</div>
+<div class="pages">Digital Resume</div>
 <hr>
 <div class="pages">Heading</div>
 </div>
@@ -129,7 +134,6 @@ other stuffs
 </div>
 
 <div class="copyright">Copyright &copy; 2019<script>new Date().getFullYear()>2019&&document.write("-"+new Date().getFullYear());</script>, Curtis Hoffman. All rights reserved.</div>
-	</div>
 
 
 </footer>
