--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ other stuffs
 <nav>
 <div class="navsection">
 
-
-<div class="navbutton">Home  <!--- All Caps? Change Styling --->
+<div class="navbutton"><div class="navtext">Home</div>  <!--- All Caps? Change Styling --->
 <div class="dropdown-content"> <!--- Add animation to the dropdown menu --->
 <a href="#">Introduction</a>
 <a href="#">Biography</a>
@@ -35,7 +34,7 @@ other stuffs
 </div>
 </div>
 
-<div class="navbutton">Engineering
+<div class="navbutton"><div class="navtext">Engineering</div>
 <div class="dropdown-content">
 <a href="#">Projects</a>
 <a href="#">Personal Projects/Ideas</a>
@@ -43,7 +42,7 @@ other stuffs
 </div>
 </div>
 
-<div class="navbutton">Design
+<div class="navbutton"><div class="navtext">Design</div>
 <div class="dropdown-content">
 <a href="#">Portfolio</a>
 <a href="#">Events</a>
@@ -51,10 +50,11 @@ other stuffs
 </div>
 </div>
 
-<div class="navbutton">Baseball
+<div class="navbutton"><div class="navtext">Baseball</div>
 <div class="dropdown-content">
 <a href="#">2PM</a>
-<a href="#">Coaching Philosophy and Experience</a>
+<a href="#">Coaching Philosophy</a>
+<a href="#">Coaching Experience</a>
 <a href="#">Career and Reflections</a>
 </div>
 </div>
@@ -62,14 +62,14 @@ other stuffs
 <a id="blank"></a>
 
 
-<div id="navcontact" class="navbutton">Contact Me
+<div id="navcontact" class="navbutton"><div class="navtext">Contact Me</div>
 <div class="dropdown-content">
 <a href="#">Email</a>
 <a href="#">LinkedIn</a>
 </div>
 </div>
 
-
+	</div>
 </nav>
 
 <!-- Content -->
@@ -79,7 +79,10 @@ other stuffs
 <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at mauris ac erat feugiat blandit. Ut suscipit, lorem in ornare rhoncus, mi eros condimentum augue, eu vehicula enim lacus at ipsum. Cras eu nunc tellus. Aliquam est felis, scelerisque in massa sit amet, bibendum tincidunt nulla. Curabitur quis purus commodo, egestas ipsum ac, dignissim erat. Phasellus tincidunt ultricies condimentum. Sed cursus est sit amet mauris varius, vel aliquet tortor varius. Suspendisse eget elit justo. Aenean convallis tortor vel libero mollis porta. Add links to the paragraph Add signature, maybe have it animate once on scroll</p>
 </main>
 
-<!--- Add hover dialogue tags, hover slides out text or logo that says linkedin or email, make logos white? -->
+<!--- Add hover dialogue tags, hover slides out text or logo that says linkedin or email, make logos white? 
+
+text gets stuck between scroll pixels, make pixel perfect
+-->
 
 <footer>
 <div class="footercontact">
@@ -98,23 +101,23 @@ other stuffs
 <!-- Experience -->
 <div class="links">
 <div class="heading">Experience</div>
-<div class="pages">Engineering</div>
+<div class="pages">Digital Resume</div>
+<hr>
+<div class="pages">Professional</div>
 <hr>
 <div class="pages">Design</div>
 <hr>
 <div class="pages">Baseball</div>
-<hr>
-<div class="pages">Heading</div>
 </div>
 <div class="links">
 
 <!-- Projects -->
 <div class="heading">Projects</div>
-<div class="pages">Heading</div>
+<div class="pages">Professional</div>
 <hr>
-<div class="pages">Heading</div>
+<div class="pages">Academic</div>
 <hr>
-<div class="pages">Heading</div>
+<div class="pages">Personal</div>
 <hr>
 <div class="pages">Heading</div>
 </div>
