--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ other stuffs
 <nav>
 <div class="navsection">
 
-<div class="navbutton"><div class="navtext">Home</div>  <!--- All Caps? Change Styling --->
+<div class="navbutton"><div class="navtext">Home</div>  <!--- All Caps? Change Styling 
+
+Text Wrap drop down menus? Align left or center?
+--->
 <div class="dropdown-content"> <!--- Add animation to the dropdown menu --->
 <a href="#">Introduction</a>
 <a href="#">Biography</a>
